--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name = demoApplication
 server.port = 8081  
-spring.datasource.url =jdbc:mysql://localhost:3306/transactiondb?useSSL=false
+spring.datasource.url =jdbc:mysql://localhost:3306/transactiondb?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=local123456
 spring.jpa.properties.hibernate.show_sql=true
